--- a/myapp/views/common/navbar.ejs
+++ b/myapp/views/common/navbar.ejs
@@ -50,6 +50,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/postgres/coursesearch">Course Search</a>
                     <a class="dropdown-item" href="/postgres/createcourse">Course Create</a>
+                    <a class="dropdown-item" href="/postgres/cheatsheet">Temporary Cheat Sheet Link</a>
                 </div>
             </li>
 
