Node.js Email Sending function

--- a/myapp/views/common/navbar.ejs
+++ b/myapp/views/common/navbar.ejs
@@ -51,6 +51,7 @@
                     <a class="dropdown-item" href="/postgres/coursesearch">Course Search</a>
                     <a class="dropdown-item" href="/postgres/createcourse">Course Create</a>
                     <a class="dropdown-item" href="/postgres/cheatsheet">Temporary Cheat Sheet Link</a>
+                    <a class="dropdown-item" href="/postgres/comments">Temporary Comments Link</a>
                 </div>
             </li>
 
