--- a/myapp/views/lead/leads.ejs
+++ b/myapp/views/lead/leads.ejs
@@ -54,6 +54,8 @@
         </div>
       </div>
     </div>
+    <% include ../common/comments %>
+
   </div>
   <footer class="tm-footer row tm-mt-small">
     <% include ../common/footer %>
