--- a/myapp/views/users/login.ejs
+++ b/myapp/views/users/login.ejs
@@ -1,38 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>    
-    <% include ../common/head %>
-  </head>
+
+<head>
+  <% include ../common/head %>
+  <!-- <script type="text/javascript">
+    var onloadCallback = function () {
+      grecaptcha.render('html_element', {
+        'sitekey': '6LfkCJ4UAAAAAJqH9azrZG38qCKLarQbMq6IBred'
+      });
+    };
+  </script> -->
+  
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+</head>
 
 
-  <body>
-      <div class="" id="home">
-          <div class="container">
+<body>
+  <div class="" id="home">
+    <div class="container">
 
-    <div>
+      <div>
         <nav class="navbar navbar-expand-xl">
-            <% if (user) { %> 
-                <% include ../common/navbar %>
-            <% } else { %>
-                <% include ../common/navbar_noleads %>
-            <% } %>
+          <% if (user) { %>
+          <% include ../common/navbar %>
+          <% } else { %>
+          <% include ../common/navbar_noleads %>
+          <% } %>
         </nav>
-    </div>
+      </div>
 
-    <div class="container tm-mt-big tm-mb-big">
-      <div class="row">
-        <div class="col-12 mx-auto tm-login-col">
-          <div class="tm-bg-primary-dark tm-block tm-block-h-auto">
-            <div class="row">
-              <div class="col-12 text-center">
-                <h2 class="tm-block-title mb-4">Welcome to Dashboard, Login</h2>
+      <div class="container tm-mt-big tm-mb-big">
+        <div class="row">
+          <div class="col-12 mx-auto tm-login-col">
+            <div class="tm-bg-primary-dark tm-block tm-block-h-auto">
+              <div class="row">
+                <div class="col-12 text-center">
+                  <h2 class="tm-block-title mb-4">Welcome to Dashboard, Login</h2>
+                </div>
               </div>
-            </div>
-            <div class="row mt-2">
-              <div class="col-12">
-                <form action="/users/login" method="post" class="tm-login-form">
-                  <div class="form-group">
-                    <!--
+              <div class="row mt-2">
+                <div class="col-12">
+                  <form action="/users/login" method="post" class="tm-login-form">
+                    <div class="form-group">
+                      <!--
                     <label for="username">Username</label>
                     <input
                       name="username"
@@ -44,53 +54,44 @@
                     -->
 
 
-                    <label for="email">Email</label>
-                    <input
-                      name="email"
-                      type="email"
-                      class="form-control validate"
-                      id="email"
-                      value=""
-                      required
-                    />
-                  </div>
-                  <div class="form-group mt-3">
-                    <label for="password">Password</label>
-                    <input
-                      name="password"
-                      type="password"
-                      class="form-control validate"
-                      id="password"
-                      value=""
-                      required
-                    />
-                  </div>
-                  <div class="form-group mt-4">
-                    <button
-                      type="submit"
-                      class="btn btn-primary btn-block text-uppercase"
-                    >
-                      Login
+                      <label for="email">Email</label>
+                      <input name="email" type="email" class="form-control validate" id="email" value="" required />
+                    </div>
+                    <div class="form-group mt-3">
+                      <label for="password">Password</label>
+                      <input name="password" type="password" class="form-control validate" id="password" value=""
+                        required />
+                    </div>
+                    <!--<div id="html_element" class="form-group mt-3">
+                      input name="captcha" class="form-control validate" id="captcha"
+                        required />
+                    </div>-->
+                    <div class="g-recaptcha form-group mt-3" data-sitekey="6LfkCJ4UAAAAAJqH9azrZG38qCKLarQbMq6IBred"></div>
+                    <div class="form-group mt-4">
+                      <button type="submit" class="btn btn-primary btn-block text-uppercase">
+                        Login
+                      </button>
+                    </div>
+                    <button class="mt-5 btn btn-primary btn-block text-uppercase">
+                      Forgot your password?
                     </button>
-                  </div>
-                  <button class="mt-5 btn btn-primary btn-block text-uppercase">
-                    Forgot your password?
-                  </button>
-                </form>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+
+
+      <footer class="tm-footer row tm-mt-small">
+        <% include ../common/footer %>
+      </footer>
+
     </div>
+  </div>
+  <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer>
+  </script>
+</body>
 
-
-<footer class="tm-footer row tm-mt-small">
-<% include ../common/footer %>
-</footer>
-
-</div>
-</div>
-
-  </body>
 </html>
